--- a/ar.html
+++ b/ar.html
@@ -593,7 +593,7 @@
                         <input type="text" name="subject" placeholder="عنوان الرسالة">
                         <!-- </div> -->
                         <!-- <div class="right"> -->
-                        <textarea placeholder="Your Message"></textarea>
+                        <textarea placeholder="الرسالة"></textarea>
                         <input type="submit" value="ارسال">
                         <!-- </div> -->
                     </form>
